--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<version>2.1.1.RELEASE</version>
 	</parent>
 
-	<groupId>es.codeurjc</groupId>
-	<artifactId>webchat</artifactId>
+	<groupId>es.codeurjc.pc</groupId>
+	<artifactId>jose.luis.ojosnegros.manchon</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
